// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar should contain progress-bar-inner-text css class when text inside is set true 1`] = `
<scale-progress-bar text-inside="true">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-10 {
  width: 100%;
}
.progress-bar--has-error-0-0-11 {}
.progress-bar--has-error-0-0-11 .progress-bar__outer-0-0-14 {
  border: 1px solid #f50057;
}
.progress-bar--has-error-0-0-11 .progress-bar__status-description-0-0-18 {
  color: #f50057;
}
.progress-bar--has-error-0-0-11 scale-icon {
  --icon-color: #f50057;
}
.progress-bar--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar-wrapper-0-0-13 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper-0-0-13 scale-icon {
  margin-top: 12px;
}
.progress-bar__outer-0-0-14 {
  width: 100%;
  height: 8px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-15 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status-0-0-16 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__status-0-0-17 {
  color: #606266;
  display: inline-block;
  font-size: 12px;
}
.progress-bar__status-description-0-0-18 {
  color: #606266;
  font-size: 12px;
}
    </style>
    <style>
      @keyframes showProgress {
    from {
      width: 0;
    }
    to {
      width: 0%;
    }
  }
    </style>
    <div class="progress-bar-0-0-10">
      <div class="progress-bar-wrapper-0-0-13">
        <div class="progress-bar__outer-0-0-14" style="height: 6px;">
          <div class="progress-bar__inner-0-0-15" style="width: 0%; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should contain progress-bar-text css class when show text is set true 1`] = `
<scale-progress-bar show-status="true">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-10 {
  width: 100%;
}
.progress-bar--has-error-0-0-11 {}
.progress-bar--has-error-0-0-11 .progress-bar__outer-0-0-14 {
  border: 1px solid #f50057;
}
.progress-bar--has-error-0-0-11 .progress-bar__status-description-0-0-18 {
  color: #f50057;
}
.progress-bar--has-error-0-0-11 scale-icon {
  --icon-color: #f50057;
}
.progress-bar--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar-wrapper-0-0-13 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper-0-0-13 scale-icon {
  margin-top: 12px;
}
.progress-bar__outer-0-0-14 {
  width: 100%;
  height: 8px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-15 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status-0-0-16 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__status-0-0-17 {
  color: #606266;
  display: inline-block;
  font-size: 12px;
}
.progress-bar__status-description-0-0-18 {
  color: #606266;
  font-size: 12px;
}
    </style>
    <style>
      @keyframes showProgress {
    from {
      width: 0;
    }
    to {
      width: 0%;
    }
  }
    </style>
    <div class="progress-bar-0-0-10">
      <div class="progress-bar-wrapper-0-0-13">
        <div class="progress-bar__outer-0-0-14" style="height: 6px;">
          <div class="progress-bar__inner-0-0-15" style="width: 0%; animation: showProgress 3s ease-in-out;"></div>
        </div>
        <div class="progress-bar__status-0-0-17">
          0%
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should have css property width 24px when stroke width is set to 24 1`] = `
<scale-progress-bar stroke-width="24">
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-10 {
  width: 100%;
}
.progress-bar--has-error-0-0-11 {}
.progress-bar--has-error-0-0-11 .progress-bar__outer-0-0-14 {
  border: 1px solid #f50057;
}
.progress-bar--has-error-0-0-11 .progress-bar__status-description-0-0-18 {
  color: #f50057;
}
.progress-bar--has-error-0-0-11 scale-icon {
  --icon-color: #f50057;
}
.progress-bar--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar-wrapper-0-0-13 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper-0-0-13 scale-icon {
  margin-top: 12px;
}
.progress-bar__outer-0-0-14 {
  width: 100%;
  height: 8px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-15 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status-0-0-16 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__status-0-0-17 {
  color: #606266;
  display: inline-block;
  font-size: 12px;
}
.progress-bar__status-description-0-0-18 {
  color: #606266;
  font-size: 12px;
}
    </style>
    <style>
      @keyframes showProgress {
    from {
      width: 0;
    }
    to {
      width: 0%;
    }
  }
    </style>
    <div class="progress-bar-0-0-10">
      <div class="progress-bar-wrapper-0-0-13">
        <div class="progress-bar__outer-0-0-14" style="height: 24px;">
          <div class="progress-bar__inner-0-0-15" style="width: 0%; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;

exports[`ProgressBar should match snapshot 1`] = `
<scale-progress-bar>
  <mock:shadow-root>
    <style>
      .progress-bar-0-0-10 {
  width: 100%;
}
.progress-bar--has-error-0-0-11 {}
.progress-bar--has-error-0-0-11 .progress-bar__outer-0-0-14 {
  border: 1px solid #f50057;
}
.progress-bar--has-error-0-0-11 .progress-bar__status-description-0-0-18 {
  color: #f50057;
}
.progress-bar--has-error-0-0-11 scale-icon {
  --icon-color: #f50057;
}
.progress-bar--disabled-0-0-12 {
  cursor: not-allowed;
  opacity: 0.5;
}
.progress-bar-wrapper-0-0-13 {
  width: 100%;
  display: flex;
  box-sizing: border-box;
  align-items: center;
}
.progress-bar-wrapper-0-0-13 scale-icon {
  margin-top: 12px;
}
.progress-bar__outer-0-0-14 {
  width: 100%;
  height: 8px;
  margin: 12px 12px 12px 0;
  overflow: hidden;
  position: relative;
  background: #ebeef5;
  border-radius: 100px;
}
.progress-bar__inner-0-0-15 {
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  position: absolute;
  align-items: center;
  white-space: nowrap;
  border-radius: 100px;
  justify-content: flex-end;
  animation-fill-mode: both;
  background: #e20074;
}
.progress-bar__inner-status-0-0-16 {
  color: #fff;
  padding: 0 12px;
  font-size: 12px;
}
.progress-bar__status-0-0-17 {
  color: #606266;
  display: inline-block;
  font-size: 12px;
}
.progress-bar__status-description-0-0-18 {
  color: #606266;
  font-size: 12px;
}
    </style>
    <style>
      @keyframes showProgress {
    from {
      width: 0;
    }
    to {
      width: 0%;
    }
  }
    </style>
    <div class="progress-bar-0-0-10">
      <div class="progress-bar-wrapper-0-0-13">
        <div class="progress-bar__outer-0-0-14" style="height: 6px;">
          <div class="progress-bar__inner-0-0-15" style="width: 0%; animation: showProgress 3s ease-in-out;"></div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  Label
</scale-progress-bar>
`;
